<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpisBodovaActivity"
    android:keepScreenOn="true">

    <LinearLayout
        android:id="@+id/lin_rezultat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/tv_zbrojeni_rezultat_mi"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="0"/>
        <TextView
            android:id="@+id/tv_zbrojeni_rezultat_vi"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="0"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_bodovi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/layout_upis_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_rezultat">

        <TextView
            android:id="@+id/tv_bodovi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bodovi"
            android:textSize="30sp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:id="@+id/linear_bodovi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bodovi">

            <TextView
                android:id="@+id/text_mi_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/miD"
                android:textSize="20sp"/>


            <EditText
                android:id="@+id/text_bodovi_mi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                android:hint="0"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_vi_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/viD"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/text_bodovi_vi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                android:hint="0"
                android:textSize="20sp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_zvanja"
        app:layout_constraintTop_toBottomOf="@id/con_bodovi"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/layout_upis_bg">

        <TextView
            android:id="@+id/tv_zvanja"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zvanja"
            android:textSize="30sp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:id="@+id/linear_zvanja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_zvanja">

            <TextView
                android:id="@+id/text_mi_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/miD"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/text_zvanja_mi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                android:hint="0"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_vi_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/viD"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/text_zvanja_vi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                android:hint="0"
                android:textSize="20sp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        app:layout_constraintTop_toBottomOf="@id/con_zvanja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btn_upisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/upisi"
        android:textSize="25sp"
        android:background="@drawable/btn_upisi_bg"/>

</androidx.constraintlayout.widget.ConstraintLayout>